// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentList renders correctly when there are no documents 1`] = `
<Table
  responsiveTag="div"
  tag="table"
>
  <caption />
  <tbody>
    <tr>
      <th>
        DOC NAME
      </th>
      <th>
        FILE
      </th>
      <th />
    </tr>
  </tbody>
</Table>
`;

exports[`DocumentList renders correctly with documents 1`] = `
<Table
  responsiveTag="div"
  tag="table"
>
  <caption />
  <tbody>
    <tr>
      <th>
        DOC NAME
      </th>
      <th>
        FILE
      </th>
      <th />
    </tr>
    <Connect(DocumentListItem)
      docClass="Board of Directors"
      document={
        Object {
          "docClass": "Board of Directors",
          "status": "Missing",
        }
      }
    />
    <Connect(DocumentListItem)
      docClass="Auditor Letter"
      document={
        Object {
          "docClass": "Auditor Letter",
          "status": "Missing",
        }
      }
    />
  </tbody>
</Table>
`;
